fixed margin in .card and removed body align-items to center card

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Figtree";
+    src: url("../assets/fonts/Figtree-VariableFont_wght.ttf") format("truetype");
+}
+
+
 :root {
    --yellow: hsl(47,88%,63%);
    --white: hsl(0, 0%, 100%);
@@ -16,9 +22,7 @@ body {
     background-color: var(--yellow);
     display: flex;
     flex-direction: column;
-    align-items: center;
     font-family: var(--font-family);
-    margin-top: 8rem;
 }
 
 .card {
@@ -30,6 +34,7 @@ body {
     display: grid;
     grid-template-rows: auto 1fr;
     max-width: 375px;
+    margin: auto;
 }
 
 .card-img {
